--- a/src/Components/Tour/DetailsMain.css
+++ b/src/Components/Tour/DetailsMain.css
@@ -46,8 +46,9 @@
     max-width: 1200px;
     margin: 0 auto;
     line-height: 1.0;
-    font-weight: 30;
+    font-weight: 60;
     text-align: center;
+    font-size: 2.5rem;
 }
 
 .box-title {
